--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
       <a href="https://www.linkedin.com/in/carolinethiriot/" target="_blank">
         Caroline Thiriot</a
       >
+<a href="https://github.com/carolineleonthiriot/Weather-app-carolinexriott.git" target="_blank">
+        See the code source here.</a
+      >
+      
+
     </span>
     <script src="script.js"></script>
   </body>
